--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>smtp</artifactId>
+            <version>1.6.3</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
